--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-# _config.yml for workfromri.com
-theme: jekyll-theme-minimal
-
 # Site settings
 title: "WorkFromRI"
 description: "Connecting Rhode Island's remote workers with resources, events, and a community of like-minded professionals."
@@ -17,8 +14,9 @@ twitter_username: "ejhumphrey"
 linkedin_username: "ejhumphrey"
 
 # Build settings
-markdown: kramdown
-theme: jekyll-theme-minimal # Choose a simple theme like 'minima' or 'jekyll-theme-minimal'
+# markdown: kramdown
+# theme: jekyll-theme-minimal # Choose a simple theme like 'minima' or 'jekyll-theme-minimal'
+remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-feed # Optional, if you'd like an RSS feed
   - jekyll-seo-tag # Optional, for SEO enhancements
