--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ linkedin_username: "ejhumphrey"
 # Build settings
 # markdown: kramdown
 # theme: jekyll-theme-minimal # Choose a simple theme like 'minima' or 'jekyll-theme-minimal'
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-feed # Optional, if you'd like an RSS feed
   - jekyll-seo-tag # Optional, for SEO enhancements
